<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   tools:context=".MainActivity">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:layout_editor_absoluteX="-16dp"
            tools:layout_editor_absoluteY="-214dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <Button
                    android:id="@+id/b_Bonjour"
                    android:textSize="20dp"
                    android:textColor="#121211"
                    android:onClick="bonjour"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/bonjour"
                    />

            <Button
                    android:id="@+id/b_Chrono"
                    android:onClick="chrono"
                    android:textSize="20dp"
                    android:textColor="#121211"
                    android:layout_width="match_parent"
                    android:layout_height="115dp"
                    android:text="@string/chrono"
            />
            <Button
                    android:id="@+id/b_Photo"
                    android:onClick="photo"
                    android:textSize="20dp"
                    android:textColor="#121211"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/photo"
            />


            <Button
                    android:id="@+id/b_derniere"
                    android:onClick="derniere"
                    android:textSize="20dp"
                    android:textColor="#121211"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/d_prise"
            />


            <Button
                    android:id="@+id/b_Long"
                    android:textSize="20dp"
                    android:textColor="#121211"
                    android:onClick="longue"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/tache"
            />


            <Button
                    android:id="@+id/b_Meteo"
                    android:onClick="meteo"
                    android:textSize="20dp"
                    android:textColor="#121211"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/meteo"
            />


            <Button
                    android:id="@+id/b_Contacts"
                    android:onClick="contacts"
                    android:textSize="20dp"
                    android:textColor="#121211"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/contacts"
            />

            <Button
                    android:id="@+id/b_Capteurs"
                    android:onClick="capteurs"
                    android:textSize="20dp"
                    android:textColor="#121211"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/capteurs"
            />

            <Button
                    android:id="@+id/b_Select"
                    android:onClick="select"
                    android:textSize="20dp"
                    android:textColor="#121211"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:text="@string/select"
            />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>


